# protoc-gen-persist

./: .gitignore  .gitlab-ci.yml  .plzconfig  .travis.yml  BUILD.bazel  BUILD.plz  Gopkg.toml  LICENSE  Makefile  README.md  Untitled-1  WORKSPACE  circle.yml  glide.yaml  go.mod  go.sum  main.go  main_test.go  protoc-gen-persist.coverprofile  protoc_gen_persist_suite_test.go  wercker.yml
.circleci/: .gitlab-ci.yml  config.yml
build_defs/: BUILD.plz  proto_helpers.build_defs
docs/: _config.yml  index.md  index_v3.md  main.go  petshop.proto  test.md  tutorial.md
docs/_includes/: analytics_google  footer  global_head  navigation  scripts
docs/_layouts/: default.html  home.html
docs/assets/css/: style.scss  tcn-bootstrap-theme.min.css  tcn-bootstrap.min.css
docs/assets/fonts/: proximanova-bold-webfont.eot  proximanova-light-webfont.eot  proximanova-regular-webfont.eot  proximanova-semibold-webfont.eot
docs/test/: petshop.pb.go  petshop.persist.go
example/: example1.proto
examples/: README.md  example1.proto  example2.proto  example3.proto
examples/hooks/: hooks.go
examples/mytime/: hooks.go  myenum.go  time.go
examples/spanner/: example3.proto
examples/spanner/basic/: basic_example.pb.go  basic_example.persist.go  basic_example.proto  basic_ext.go
examples/spanner/bob_example/: bobs.pb.go  bobs.persist.go  bobs.proto  bobs_ext.go
examples/spanner/delete/: delete_examples.pb.go  delete_examples.persist.go  delete_examples.proto  delete_exmaples_ext.go
examples/spanner/hooks/: hooks.go
examples/spanner/import_tests/: generate.sh  go_no_persist.pb  go_no_persist.proto  imports_test.go  neither_nested_package.pb  neither_nested_package.proto  neither_simple_package.pb  neither_simple_package.proto  persist_and_go.pb  persist_and_go.proto  persist_and_go_same.pb  persist_and_go_same.proto  persist_no_go.pb  persist_no_go.proto
examples/sql/: example1.proto
examples/sql/basic/: basic.pb.go  basic.persist.go  basic.proto  basic_ext.go
examples/sql/little_of_everything/: little_of_everything.pb.go  little_of_everything.persist.go  little_of_everything.proto
examples/test/: test.proto
examples/test_issue_32/: hooks.go  service.persist.go  service.proto
examples/time/: time.go
examples/user_spanner/: Makefile  README.md  main.go  main_test.go
examples/user_spanner/pb/: spanner.gold  time_converter.go  user.pb.go  user.persist.go  user.proto
examples/user_spanner_bazel/: BUILD.bazel  Makefile  main.go  main_test.go
examples/user_spanner_bazel/pb/: BUILD.bazel  time_converter.go  user.pb.go  user.persist.go  user.proto  user_p.proto  v2.go  v2.spanner.go  v2.spanner.golden
examples/user_spanner_bazel/pb/persist_lib/: pkg_level_definitions.persist.go  user_queries.persist.go
examples/user_sql/: Makefile  main.go  main_test.go
examples/user_sql/pb/: BUILD.bazel  extra_persist_service_in_pkg.pb.go  extra_persist_service_in_pkg.persist.go  extra_persist_service_in_pkg.proto  time_converter.go  user.pb.go  user.persist.go  user.proto  v2.go  v2.go.golden
generator/: BUILD.bazel  BUILD.plz  backends.go  file.go  generator.coverprofile  generator.go  generator_suite_test.go  generator_test.go  import.go  init.go  matchers.go  method.go  method_stringer.go  method_type_stringers.go  parse_spanner_delete.go  parse_spanner_insert.go  parse_spanner_update.go  persist_lib_stringer.go  persist_opts.go  persistence.go  read_outside_vars.go  rpc_snippets.go  rpc_templates.go  salvage.go  service.go  service_test.go  spanner_args.go  spanner_helper.go  stringer_utils.go  struct.go  struct_test.go  template.go  templates.go  templates_sql.go  utils.go  utils_test.go
generator/delete_parser/: delete_parser  parse_delete_query.go  parse_delete_query_test.go
generator/file/: file.go  file_test.go
generator/files/: file.go  template.go  template_list.go
generator/parser/: BUILD.bazel  eater.go  parser.go  parser_test.go  query.go  scanner.go  tokens.go
generator/pkgimport/: import.go  import_test.go
generator/service/: method.go  service.go  service_test.go  templates.go  templates_mongo.go  templates_sql.go
generator/spanner_templates/: unary.go
generator/structures/: struct.go  struct_test.go
generator/templates/: imports.go  main.go  method.go  mongo.go  services.go  spanner.go  sql.go  structs.go  utils.go
generator/utils/: utils.go
lib/: commons.go
persist/: BUILD.bazel  BUILD.plz  commons.go  def.bzl  options.pb.go  options.proto  options.proto.potential_v2  test_proto.potential_v2
test-impl/: docker-compose.yml
test-impl/client/spanner/: main.go
test-impl/client/sql/: main.go
test_service/user_spanner/: main.go  main_test.go  read_spanner.go
test_service/user_sql/: Makefile  docker-compose.yml  main.go  main_test.go
tests/: README.md
tests/hooks/: BUILD.bazel  hooks.go
tests/mytime/: BUILD.bazel  myenum.go
tests/spanner/basic/: BUILD.bazel  basic_example.pb.go  basic_example.persist.go  basic_example.proto  myenum.go
tests/spanner/basic/persist_lib/: BUILD.bazel  basic_example_queries.persist.go  basic_example_query_handlers.persist.go  pkg_level_definitions.persist.go
tests/spanner/bob_example/: BUILD.bazel  bobs.pb.go  bobs.persist.go  bobs.proto
tests/spanner/bob_example/persist_lib/: BUILD.bazel  bobs_queries.persist.go  bobs_query_handlers.persist.go  pkg_level_definitions.persist.go
tests/sql/basic/: BUILD.bazel  basic.pb.go  basic.persist.go  basic.proto
tests/sql/basic/persist_lib/: BUILD.bazel  basic_queries.persist.go  basic_query_handlers.persist.go  pkg_level_definitions.persist.go
tests/sql/little_of_everything/: BUILD.bazel  little_of_everything.pb.go  little_of_everything.persist.go  little_of_everything.proto  myenum.go
tests/sql/little_of_everything/persist_lib/: BUILD.bazel  little_of_everything_queries.persist.go  little_of_everything_query_handlers.persist.go  pkg_level_definitions.persist.go
tests/test/: BUILD.bazel  test.pb.go  test.proto
tests/test_issue_32/: mapping.go  service.proto
tools/: BUILD.plz
utils/: conversion.go  conversion_test.go
(+62 files in other folders)
