load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

gazelle(
    name = "gazelle",
    prefix = "github.com/tcncloud/protoc-gen-persist",
)

go_proto_library(
    name = "persist_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/tcncloud/protoc-gen-persist/persist",
    proto = "//persist:persist_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/tcncloud/protoc-gen-persist",
    visibility = ["//visibility:public"],
    deps = [
        "//generator:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/plugin:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-persist",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

# go_test(
#     name = "go_default_xtest",
#     srcs = ["main_test.go"],
#     importpath = "github.com/tcncloud/protoc-gen-persist",
#     deps = [
#         "@com_github_onsi_ginkgo//:go_default_library",
#         "@com_github_onsi_gomega//:go_default_library",
#     ],
# )
