load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "backends.go",
        "file.go",
        "generator.go",
        "import.go",
        "method.go",
        "method_type_stringers.go",
        "persist_lib_stringer.go",
        "persist_opts.go",
        "persistence.go",
        "read_outside_vars.go",
        "service.go",
        "stringer_utils.go",
        "struct.go",
        "utils.go",
    ],
    importpath = "github.com/tcncloud/protoc-gen-persist/generator",
    visibility = ["//visibility:public"],
    deps = [
        "//:persist_go_proto",
        "//generator/parser:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/descriptor:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/generator:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/plugin:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_x_tools//imports:go_default_library",
    ],
)
