load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "file.go",
        "generator.go",
        "import.go",
        "matchers.go",
        "persist_opts.go",
        "rpc_snippets.go",
        "service.go",
        "struct.go",
        "utils.go",
    ],
    importpath = "github.com/tcncloud/protoc-gen-persist/generator",
    visibility = ["//visibility:public"],
    deps = [
        "//persist:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/generator:go_default_library_gen",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
        "@org_golang_x_tools//imports:go_default_library",
    ],
)
