package(default_visibility = ["//visibility:public"])

filegroup(
    name = "protos",
    srcs = [
        "options.proto",
    ],
)

proto_library(
    name = "persist_proto",
    srcs = [
        "options.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)
