package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

filegroup(
    name = "protos",
    srcs = [
        "options.proto",
    ],
)

proto_library(
    name = "persist_proto",
    srcs = [
        "options.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "options_pb",
    importpath = "github.com/tcncloud/protoc-gen-persist",
    proto = ":persist_proto",
)
