load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "persist_proto",
    srcs = ["options.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "persist_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/tcncloud/protoc-gen-persist/persist",
    proto = ":persist_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["commons.go"],
    embed = [":persist_go_proto"],
    importpath = "github.com/tcncloud/protoc-gen-persist/persist",
    visibility = ["//visibility:public"],
    deps = ["@com_google_cloud_go//spanner:go_default_library"],
)
