load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "eater.go",
        "parser.go",
        "query.go",
        "scanner.go",
        "tokens.go",
    ],
    importpath = "github.com/tcncloud/protoc-gen-persist/generator/parser",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_xtest",
    srcs = ["parser_test.go"],
    importpath = "github.com/tcncloud/protoc-gen-persist/generator/parser_test",
    deps = [":go_default_library"],
)
