load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "test_go_proto",
    importpath = "github.com/tcncloud/protoc-gen-persist/tests/test",
    proto = ":test_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_protobuf//ptypes/timestamp:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":test_go_proto"],
    importpath = "github.com/tcncloud/protoc-gen-persist/tests/test",
    visibility = ["//visibility:public"],
)
