load("//persist:def.bzl", "persist_lib_go_library", "persist_go_library")

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
)

proto_library(
    name = "user_proto",
    srcs = [":protos"],
    deps = [
        "//persist:persist_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

persist_lib_go_library(
    name = "persist_lib_go_proto",
    go_lib_deps = [
        "@com_google_cloud_go//spanner:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
    importpath = "github.com/tcncloud/protoc-gen-persist/examples/user_spanner_bazel/pb/persist_lib",
    proto = ":user_proto",
    visibility = ["//visibility:public"],
)

persist_go_library(
    name = "user_go_proto",
    go_lib_deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_google_cloud_go//spanner:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "//:persist_go_proto",
        ":persist_lib_go_proto",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library",
    ],
    go_srcs = [
        "time_converter.go",
    ],
    importpath = "github.com/tcncloud/protoc-gen-persist/examples/user_spanner_bazel/pb",
    proto = ":user_proto",
    visibility = ["//visibility:public"],
)
