load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@org_pubref_rules_protobuf//go:rules.bzl", "go_proto_library")

proto_library(
    name = "basic_proto",
    srcs = ["basic_example.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//persist:persist_proto",
        "//tests/test:test_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

filegroup(
    name = "protos",
    srcs = ["basic_example.proto"],
)

go_proto_library(
    name = "basic_go_proto",
    importpath = "github.com/tcncloud/protoc-gen-persist/tests/spanner/basic",
    proto_deps = [
        "//:persist_go_proto",
    ],
    protos = [":protos"],
    visibility = ["//visibility:public"],
    with_grpc = True,
    deps = [
        "//:persist_go_proto",
        "//tests/test:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/descriptor:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "basic_example.persist.go",
        "myenum.go",
    ],
    embed = [":basic_go_proto"],
    importpath = "github.com/tcncloud/protoc-gen-persist/tests/spanner/basic",
    visibility = ["//visibility:public"],
    deps = [
        "//tests/mytime:go_default_library",
        "//tests/spanner/basic/persist_lib:go_default_library",
        "//tests/spanner/hooks:go_default_library",
        "//tests/test:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
        "@com_google_cloud_go//spanner:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
