load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bob_example_proto",
    srcs = ["bobs.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//persist:persist_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "bob_example_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/tcncloud/protoc-gen-persist/tests/spanner/bob_example",
    proto = ":bob_example_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//persist:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["bobs.persist.go"],
    embed = [":bob_example_go_proto"],
    importpath = "github.com/tcncloud/protoc-gen-persist/tests/spanner/bob_example",
    visibility = ["//visibility:public"],
    deps = [
        "//tests/mytime:go_default_library",
        "//tests/spanner/bob_example/persist_lib:go_default_library",
        "@com_google_cloud_go//spanner:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
