load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
)

proto_library(
    name = "bob_example_proto",
    srcs = [":protos"],
    visibility = ["//visibility:public"],
    deps = [
        "//persist:persist_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "bob_example_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/tcncloud/protoc-gen-persist/tests/spanner/bob_example",
    proto = ":bob_example_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//:persist_go_proto",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
    ],
)
