load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "little_of_everything_proto",
    srcs = ["little_of_everything.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//persist:persist_proto",
        "//tests/test:test_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "little_of_everything_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/tcncloud/protoc-gen-persist/tests/sql/little_of_everything",
    proto = ":little_of_everything_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//persist:go_default_library",
        "//tests/test:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/descriptor:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "little_of_everything.persist.go",
        "myenum.go",
    ],
    embed = [":little_of_everything_go_proto"],
    importpath = "github.com/tcncloud/protoc-gen-persist/tests/sql/little_of_everything",
    visibility = ["//visibility:public"],
    deps = [
        "//tests/mytime:go_default_library",
        "//tests/sql/little_of_everything/persist_lib:go_default_library",
        "//tests/test:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
