load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
)

proto_library(
    name = "little_of_everything_proto",
    srcs = [":protos"],
    visibility = ["//visibility:public"],
    deps = [
        "//persist:persist_proto",
        "//tests/test:test_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "little_of_everything_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/tcncloud/protoc-gen-persist/tests/sql/little_of_everything",
    proto = ":little_of_everything_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//:persist_go_proto",
        "//tests/test:test_go_proto",
        "@com_github_golang_protobuf//protoc-gen-go/descriptor:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
    ],
)
