load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bobs_queries.persist.go",
        "bobs_query_handlers.persist.go",
        "pkg_level_definitions.persist.go",
    ],
    importpath = "github.com/tcncloud/protoc-gen-persist/tests/spanner/bob_example/persist_lib",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_cloud_go//spanner:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
