load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "little_of_everything_queries.persist.go",
        "little_of_everything_query_handlers.persist.go",
        "pkg_level_definitions.persist.go",
    ],
    importpath = "github.com/tcncloud/protoc-gen-persist/tests/sql/little_of_everything/persist_lib",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_net//context:go_default_library"],
)
